--- a/main.html
+++ b/main.html
@@ -6,8 +6,16 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color: yellow;">
 	<!-- the entire body must be written by student -->
+	 <div>
+        <h1 id="f1" style="text-align: center;">Flowers photos</h1>
+        <p style="text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, commodi!</p>
+    </div>
+    <div>
+        <h1 id="f2" style="text-align: center;">Rose picture</h1>
+        <p style="text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, commodi!</p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
