--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <p style="text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, commodi!</p>
     </div>
     <div>
-        <h1 id="f2" style="text-align: center;">Roses picture</h1>
+        <h1 id="f2" style="text-align: center;">Roses pictures</h1>
         <p style="text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, commodi!</p>
     </div>
     <script type="text/javascript" src="./script.js">
